--- a/app/src/main/res/layout/organiser_events.xml
+++ b/app/src/main/res/layout/organiser_events.xml
@@ -18,7 +18,7 @@
         android:textStyle="bold" />
 
     <ListView
-        android:id="@+id/organiser_events_upcoming_list"
+        android:id="@+id/android:list"
         android:layout_width="wrap_content"
         android:layout_height="188dp"
         android:layout_alignParentBottom="true"
@@ -27,5 +27,24 @@
         android:layout_marginTop="7dp"
         android:layout_weight="1"
         android:paddingBottom="10dp" />
+
+    <Button
+        android:id="@+id/btnGetAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/btnAdd"
+        android:text="Refresh"
+        android:visibility="visible"/>
+
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="Add"
+        android:visibility="gone"/>
 
 </LinearLayout>
