--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,26 +36,22 @@
 
     <Button
         android:id="@+id/activity_main_organiser_button"
-        android:layout_width="178dp"
-        android:layout_height="51dp"
+        android:layout_width="180dp"
+        android:layout_height="52dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="18dp"
         android:background="@color/colorPrimary"
         android:text="For Organisers"
         android:textColor="@color/colorWhite"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_main_view_map_button"
-        tools:layout_editor_absoluteY="353dp"
-        tools:layout_editor_absoluteX="72dp"
-        app:layout_constraintHorizontal_bias="0.503" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_view_map_button" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="308dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="322dp"
+        android:layout_height="62dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="34dp"
@@ -64,9 +60,7 @@
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/activity_main_view_map_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </android.support.constraint.ConstraintLayout>
