--- a/app/src/main/res/layout/organiser_home.xml
+++ b/app/src/main/res/layout/organiser_home.xml
@@ -1,54 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="68dp"
-            android:layout_marginTop="155dp"
-            app:srcCompat="@drawable/ic_event_black_24px"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="234dp"
-            android:layout_marginBottom="264dp" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/imageView4"
-            android:layout_marginStart="127dp"
-            app:srcCompat="@drawable/ic_add_box_black_24px"
-            android:layout_alignBottom="@+id/imageView4"
-            android:layout_alignTop="@+id/imageView4"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="104dp" />
+            android:layout_width="152dp"
+            android:layout_height="73dp"
+            app:srcCompat="@drawable/ic_logo_vertical_01"
+            tools:layout_editor_absoluteX="116dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" />
 
         <Button
-            android:id="@+id/organiser_home_list_event_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/imageView4"
-            android:layout_below="@+id/imageView6"
-            android:text="List Events" />
+            android:id="@+id/organiser_home_create_event"
+            android:layout_width="241dp"
+            android:layout_height="59dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="36dp"
+            android:background="@color/colorPrimary"
+            android:text="CREATE EVENT"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintHorizontal_bias="0.503" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="229dp"
+            android:layout_height="72dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="49dp"
+            android:text="What would you like to do today?"
+            android:textAlignment="center"
+            android:textColor="@color/colorBlack"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
         <Button
-            android:id="@+id/organiser_home_create_event_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/imageView6"
-            android:layout_below="@+id/imageView6"
-            android:text="Create Event" />
-    </RelativeLayout>
+            android:id="@+id/organiser_home_view_events"
+            android:layout_width="241dp"
+            android:layout_height="58dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorAccent"
+            android:text="View Events"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/organiser_home_create_event" />
+    </android.support.constraint.ConstraintLayout>
 </LinearLayout>
