--- a/app/src/main/res/layout/organiser_login.xml
+++ b/app/src/main/res/layout/organiser_login.xml
@@ -55,29 +55,16 @@
         android:id="@+id/organiser_login_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="10dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/text_login"
         android:textColor="@android:color/white" />
 
-    <TextView
-        android:id="@+id/signup_link"
+    <Button
+        android:id="@+id/organiser_login_sign_up"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginBottom="10dp"
-        android:text="@string/text_not_member"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/student_login_page"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginBottom="0dp"
-        android:text="Student? Click here."
-        android:textAlignment="center"
-        android:textStyle="italic" />
+        android:layout_height="wrap_content"
+        android:text="SIGN UP" />
 
     <ProgressBar
         android:id="@+id/login_progress"
