--- a/app/src/main/res/layout/organiser_sign_up.xml
+++ b/app/src/main/res/layout/organiser_sign_up.xml
@@ -15,8 +15,8 @@
     <ImageView
         android:id="@+id/logo"
         android:layout_marginBottom="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="277dp"
+        android:layout_height="113dp"
         app:srcCompat="@drawable/ic_logo_vertical_01" />
 
     <TextView
@@ -56,7 +56,7 @@
         android:id="@+id/organiser_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="15dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword" />
@@ -64,9 +64,9 @@
     <Button
         android:id="@+id/organiser_sign_up_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:textColor="@color/colorWhite"
         android:background="@color/colorPrimary"
-        tools:text="Sign Up"/>
+        android:text="Sign Up"/>
 
 </LinearLayout>
