--- a/app/src/main/res/layout/organiser_home.xml
+++ b/app/src/main/res/layout/organiser_home.xml
@@ -10,15 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="152dp"
-            android:layout_height="73dp"
-            app:srcCompat="@drawable/ic_logo_vertical_01"
-            tools:layout_editor_absoluteX="116dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" />
-
         <Button
             android:id="@+id/organiser_home_create_event"
             android:layout_width="241dp"
@@ -40,7 +31,6 @@
             android:layout_height="72dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="49dp"
             android:text="What would you like to do today?"
             android:textAlignment="center"
             android:textColor="@color/colorBlack"
@@ -49,7 +39,7 @@
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+            tools:layout_editor_absoluteY="154dp" />
 
         <Button
             android:id="@+id/organiser_home_view_events"
@@ -64,5 +54,18 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/organiser_home_create_event" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="163dp"
+            android:layout_height="108dp"
+            app:srcCompat="@drawable/ic_logo_vertical_01"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="8dp" />
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
