--- a/app/src/main/res/layout/organiser_home.xml
+++ b/app/src/main/res/layout/organiser_home.xml
@@ -3,69 +3,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="15dp"
+    android:weightSum="1">
 
 
-    <android.support.constraint.ConstraintLayout
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="356dp"
+        android:layout_height="88dp"
+        android:layout_marginTop="50dp"
+        app:srcCompat="@drawable/ic_logo_vertical_01"
+        android:layout_weight="0.06" />
+
+    <TextView
+        android:id="@+id/textView6"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:text="What would you like to do today?"
+        android:textAlignment="center"
+        android:textColor="@color/colorBlack"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"/>
 
-        <Button
-            android:id="@+id/organiser_home_create_event"
-            android:layout_width="241dp"
-            android:layout_height="59dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="36dp"
-            android:background="@color/colorPrimary"
-            android:text="CREATE EVENT"
-            android:textColor="@color/colorWhite"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
-            app:layout_constraintHorizontal_bias="0.503" />
+    <Button
+        android:id="@+id/organiser_home_create_event"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:text="Create Event"
+        android:textColor="@color/colorWhite"
+        android:layout_marginBottom="15dp"/>
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="229dp"
-            android:layout_height="72dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="What would you like to do today?"
-            android:textAlignment="center"
-            android:textColor="@color/colorBlack"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:layout_editor_absoluteY="154dp" />
-
-        <Button
-            android:id="@+id/organiser_home_view_events"
-            android:layout_width="241dp"
-            android:layout_height="58dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/colorAccent"
-            android:text="View Events"
-            android:textColor="@color/colorWhite"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/organiser_home_create_event" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="163dp"
-            android:layout_height="108dp"
-            app:srcCompat="@drawable/ic_logo_vertical_01"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="8dp" />
-    </android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/organiser_home_view_events"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:text="View Events"
+        android:textColor="@color/colorWhite"
+        android:layout_marginBottom="15dp"/>
 </LinearLayout>
