--- a/app/src/main/res/layout/organiser_events.xml
+++ b/app/src/main/res/layout/organiser_events.xml
@@ -27,24 +27,26 @@
         android:layout_marginTop="7dp"
         android:layout_weight="1"
         android:paddingBottom="10dp" />
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/btnGetAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/btnAdd"
         android:text="Refresh"
-        android:visibility="visible"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="Add"
-        android:visibility="gone"/>
+        android:text="Add" />
+</RelativeLayout>
+
+
+
 
 </LinearLayout>
